Responsive css file added in package & Admin side design issues resolved  & Package Uploaded

--- a/edm/src/app/pages/productmodule/productmodule.component.html
+++ b/edm/src/app/pages/productmodule/productmodule.component.html
@@ -1,6 +1,6 @@
-	<!-- Shop Featured Track Section -->
+<!-- Shop Featured Track Section -->
     <div class="featured_track_list">
-        <div class="track_box">
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_1.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -17,8 +17,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_2.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -35,8 +35,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_3.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -53,8 +53,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_4.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -71,8 +71,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_5.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -89,8 +89,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_2.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -107,8 +107,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_3.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -125,8 +125,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_4.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -143,8 +143,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_5.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -161,8 +161,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_3.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -179,8 +179,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_4.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -197,8 +197,8 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
-        <div class="track_box">
+        </a>
+        <a class="track_box" [routerLink]="['/productdetails']">
             <div class="track_thumbnail_image">
                 <img src="assets/images/track_thumbnail_5.svg" class="track_thumbnail" alt="Track Thumbnail" />
                 <div class="track_hover_section">
@@ -215,6 +215,6 @@
                 <span class="track_divider"></span>
                 <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
             </a>
-        </div>
+        </a>
     </div>
 <!-- Shop Featured Track Section -->
