--- a/edm/src/app/theme/client/header/header.component.html
+++ b/edm/src/app/theme/client/header/header.component.html
@@ -7,7 +7,7 @@
         <div class="menu_link">
             <ul>
                 <li>
-                    <a href="#" title="SHOP">SHOP</a>
+                    <a [routerLink]="['/product']" title="SHOP">SHOP</a>
                 </li>
                 <li>
                     <a href="#" title="GENRE">
