Old package deleted

--- a/edm/src/app/theme/client/body/body.component.html
+++ b/edm/src/app/theme/client/body/body.component.html
@@ -1,5 +1,3 @@
-<div class="">
-    
-</div><app-clientheader></app-clientheader>
+<app-clientheader></app-clientheader>
 <router-outlet></router-outlet>
 <app-clientfooter></app-clientfooter>
