--- a/edm/src/app/theme/client/body/body.component.html
+++ b/edm/src/app/theme/client/body/body.component.html
@@ -1,3 +1,3 @@
-<app-clientheader></app-clientheader>
+<app-header></app-header>
 <router-outlet></router-outlet>
-<app-clientfooter></app-clientfooter>
+<app-footer></app-footer>
