Login & Sign Up Page Design

--- a/edm/src/app/auth/login/login.component.html
+++ b/edm/src/app/auth/login/login.component.html
@@ -1,1 +1,61 @@
-<p>login works!</p>
+<div class="authentication">
+    <div class="authentication_sec">
+        <div class="authentication_box">
+            <h2>Log in</h2>
+            <form>
+                <div class="form_group">
+                    <div class="form_area icon_form_group">
+                        <input type="text" name="username" placeholder="User Name"/>
+                        <span class="input_icon user_icon"></span>
+                    </div>
+                    <p class="error_msg">This field is Required</p>
+                </div>
+                <div class="form_group">
+                    <div class="form_area icon_form_group">
+                        <input type="password" name="password" placeholder="Password"/>
+                        <span class="input_icon password_icon"></span>
+                    </div>
+                    <p class="error_msg">This field is Required</p>
+                </div>
+                <div class="button_group">
+                    <a class="global_btn primary_btn">
+                        <span>Login</span>
+                    </a>
+                    <a class="global_btn secondary_btn">
+                        <span>Sign Up</span>
+                    </a>
+                </div>
+                <div class="save_pwd_sec">
+                    <p class="remember_me">
+                        <label class="checkbox">
+                            <input name="remember" type="checkbox">Remember Me
+                            <span></span>
+                        </label>
+                    </p>
+                    <a class="forgot_pwd_sec">
+                        Forgot Password
+                    </a>
+                </div>
+                <div class="social_login_sec">
+                    <p class="sociallogin_heading">
+                        Social Login
+                    </p>
+                    <div class="button_group">
+                        <a class="global_btn icon_btn facebook_btn">
+                            <span>Login with Facebook</span>
+                            <span class="facebook_icon btn_icon"></span>
+                        </a>
+                        <a class="global_btn icon_btn google_btn">
+                            <span>Login with Google</span>
+                            <span class="google_icon btn_icon"></span>
+                        </a>
+                    </div>
+                    <div class="become_member">
+                        <p>Want to become a Member</p>
+                        <a>Click here</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
