--- a/edm/src/app/auth/signup/signup.component.html
+++ b/edm/src/app/auth/signup/signup.component.html
@@ -1,1 +1,59 @@
-<p>signup works!</p>
+<div class="authentication">
+    <div class="authentication_sec">
+        <div class="authentication_box">
+            <h2>
+                Sign Up
+            </h2>
+            <form>
+                <div class="form_group">
+                    <div class="form_area icon_form_group">
+                        <input type="text" name="username" placeholder="Enter Your Name"/>
+                        <span class="input_icon user_icon"></span>
+                    </div>
+                    <p class="error_msg">This field is Required</p>
+                </div>
+                <div class="form_group">
+                    <div class="form_area icon_form_group">
+                        <input type="email" name="email" placeholder="Enter Your Eamil"/>
+                        <span class="input_icon email_icon"></span>
+                    </div>
+                    <p class="error_msg">This field is Required</p>
+                </div>
+                <div class="form_group">
+                    <div class="form_area icon_form_group">
+                        <select>
+                            <option selected disabled>Enter Your Role</option>
+                            <option>I am Producer</option>
+                            <option>I am Buyer</option>
+                        </select>
+                        <span class="input_icon dropdown_icon"></span>
+                    </div>
+                    <p class="error_msg">This field is Required</p>
+                </div>
+                <div class="form_group">
+                    <div class="form_area icon_form_group">
+                        <input type="password" name="password" placeholder="Password"/>
+                        <span class="input_icon password_icon"></span>
+                    </div>
+                    <p class="error_msg">This field is Required</p>
+                </div>
+                <div class="save_pwd_sec">
+                    <p class="remember_me">
+                        <label class="checkbox">
+                            <input name="remember" type="checkbox">I agree to receive email
+                            <span></span>
+                        </label>
+                    </p>
+                </div>
+                <div class="button_group">
+                    <a class="global_btn primary_btn">
+                        <span>Sign Up</span>
+                    </a>
+                    <a class="global_btn secondary_btn">
+                        <span>Login</span>
+                    </a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
