--- a/edm/src/app/theme/client/header/header.component.scss
+++ b/edm/src/app/theme/client/header/header.component.scss
@@ -1,5 +1,9 @@
-
-.nav-item{
-    padding:2px;
-    margin-left: 7px;
-}
+// .header {
+//     padding: 35px;
+//     border-bottom: 1px solid #E4E4E4;
+//     background: white;
+//     position: fixed;
+//     width: 100%;
+//     top: 0;
+//     left: 0;
+// }
