--- a/edm/src/app/theme/client/footer/footer.component.html
+++ b/edm/src/app/theme/client/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer>
-    <p  class="text-xs-center">© Copyright 2019. All rights reserved.</p>
-  </footer>
+<!-- <footer>
+    <p class="text-xs-center">© Copyright 2019. All rights reserved.</p>
+</footer> -->
