header and footer responsive design added as per wireframe

--- a/edm/src/app/auth/login/login.component.html
+++ b/edm/src/app/auth/login/login.component.html
@@ -41,18 +41,18 @@
                         Social Login
                     </p>
                     <div class="button_group">
-                        <a class="global_btn icon_btn facebook_btn">
+                        <a class="global_btn icon_btn facebook_btn" href="#" target="_blank">
                             <span>Login with Facebook</span>
                             <span class="facebook_icon btn_icon"></span>
                         </a>
-                        <a class="global_btn icon_btn google_btn">
+                        <a class="global_btn icon_btn google_btn" href="#" target="_blank">
                             <span>Login with Google</span>
                             <span class="google_icon btn_icon"></span>
                         </a>
                     </div>
                     <div class="become_member">
                         <p>Want to become a Member</p>
-                        <a>Click here</a>
+                        <a href="#" target="_blank">Click here</a>
                     </div>
                 </div>
             </form>
