--- a/edm/src/app/theme/client/footer/footer.component.html
+++ b/edm/src/app/theme/client/footer/footer.component.html
@@ -1,3 +1,92 @@
-<!-- <footer>
-    <p class="text-xs-center">© Copyright 2019. All rights reserved.</p>
-</footer> -->
+<div class="footer_sec">
+    <div class="footer_parts">
+        <h2>Categories</h2>
+        <ul>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+        </ul>
+    </div>
+    <div class="footer_parts">
+        <h2>Support</h2>
+        <ul>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+        </ul>
+    </div>
+    <div class="footer_parts">
+        <h2>About Us</h2>
+        <ul>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+            <li>
+                <a herf="#" target="_blank">Demo Demo</a>
+            </li>
+        </ul>
+    </div>
+    <div class="footer_parts">
+        <h2>Connecting Us Socially</h2>
+    </div>
+</div>
