--- a/edm/src/app/theme/client/header/header.component.html
+++ b/edm/src/app/theme/client/header/header.component.html
@@ -1,5 +1,68 @@
-<!-- <div class="header">
-    <div class="project_logo">
-        <img src="../../../../assets/images/logo.PNG" alt="EDM Logo"/>
+<div class="header">
+    <div class="mobile_menu_panel">
+        <div class="open_mobile_menu">
+            <img src="../../../../assets/images/navigation_icon.svg">
+        </div>
+        <div class="mobile_menu menu_open_animation">
+            <div class="mobile_project_logo">
+                <a href="#">
+                    <img src="../../../../assets/images/logo.PNG" alt="EDM Logo"/>
+                </a>
+            </div>
+            <div class="mobile_menu_list">
+                <p>
+                    <a href="#" target="_blank">Store</a>
+                </p>
+                <p>
+                    <a href="#" target="_blank">Genre</a>
+                </p>
+                <p>
+                    <a href="#" target="_blank">Custom Track</a>
+                </p>
+                <p>
+                    <a href="#" target="_blank">Services</a>
+                </p>
+            </div>
+        </div>
     </div>
-</div> -->
+    <div class="project_logo">
+        <a href="#">
+            <img src="../../../../assets/images/logo.PNG" alt="EDM Logo"/>
+        </a>
+    </div>
+    <div class="project_menu">
+        <div class="menu_list">
+            <p>
+                <a href="#" target="_blank">Store</a>
+            </p>
+            <p>
+                <a href="#" target="_blank">Genre</a>
+            </p>
+            <p>
+                <a href="#" target="_blank">Custom Track</a>
+            </p>
+            <p>
+                <a href="#" target="_blank">Services</a>
+            </p>
+        </div>
+        <div class="cart_section">
+            <div class="cart_area" title="My Cart">
+                <span>3</span>
+                <img src="../../../../assets/images/cart.svg" alt="Cart Image">
+            </div>
+        </div>
+        <div class="signin_btn">
+            <a class="global_circle_btn primary_btn no_margin">
+                <span>SIGN IN</span>
+            </a>
+        </div>
+    </div>
+</div>
+
+<!-- <script>
+    $(document).ready(function(){
+        $(".open_mobile_menu").click(function(){
+            $(".mobile_menu").show();
+        });
+    });
+</script> -->
