--- a/edm/src/app/auth/login/login.component.html
+++ b/edm/src/app/auth/login/login.component.html
@@ -5,14 +5,14 @@
             <form>
                 <div class="form_group">
                     <div class="form_area icon_form_group">
-                        <input type="text" name="username" placeholder="User Name"/>
+                        <input type="text" name="username" placeholder="User Name" />
                         <span class="input_icon user_icon"></span>
                     </div>
                     <p class="error_msg">This field is Required</p>
                 </div>
                 <div class="form_group">
                     <div class="form_area icon_form_group">
-                        <input type="password" name="password" placeholder="Password"/>
+                        <input type="password" name="password" placeholder="Password" />
                         <span class="input_icon password_icon"></span>
                     </div>
                     <p class="error_msg">This field is Required</p>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="become_member">
                         <p>Want to become a Member</p>
-                        <a href="#" target="_blank">Click here</a>
+                        <a (click)="signUp()" target="_blank">Click here</a>
                     </div>
                 </div>
             </form>
