--- a/edm/src/app/auth/signup/signup.component.html
+++ b/edm/src/app/auth/signup/signup.component.html
@@ -49,7 +49,7 @@
                     <a class="global_btn primary_btn">
                         <span>Sign Up</span>
                     </a>
-                    <a class="global_btn secondary_btn">
+                    <a (click)="signIn()" class="global_btn secondary_btn">
                         <span>Login</span>
                     </a>
                 </div>
